# metadata-service

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/db/: session.py
app/models/: dataset.py  lineage.py
app/schemas/: dataset.py
app/services/: lineage_service.py
